--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serverstart": "DEBUG=express-locallibrary-tutorial:* npm run devstart"
   },
   "dependencies": {
+    "aws-sdk": "^2.1647.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
@@ -17,6 +18,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^8.4.0",
     "morgan": "~1.9.1",
+    "multer-s3": "^3.0.1",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
