--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^8.4.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "pug": "2.0.0-beta11"
   },
