--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serverstart": "DEBUG=express-locallibrary-tutorial:* npm run devstart"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.600.0",
     "aws-sdk": "^2.1647.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
