--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "discinventory",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": ">=20.11.1"
+  },
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
@@ -10,13 +13,16 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.600.0",
     "aws-sdk": "^2.1647.0",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.3.1",
     "express-validator": "^7.1.0",
+    "helmet": "^7.1.0",
     "http-errors": "~1.6.3",
     "mongoose": "^8.4.0",
     "morgan": "~1.9.1",
